# TeleCode

./: CMakeLists.txt
include/additionally/: _string.hpp
include/client/: requests.hpp
include/json/: data_types.hpp  parser.hpp
src/additionally/: _string.cpp
src/client/: CMakeLists.txt
src/json/: data_types.cpp  parser.cpp
test/: test  test.cpp
